# kcuckounter

./: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  bd.sh  readme.md
.github/workflows/: docs.yml
include/: mainwindow.hpp  settings.hpp
include/strategy/: strategy.hpp  strategyinfo.hpp
include/table/: table.hpp  tableslot.hpp
include/widgets/: cards.hpp  carousel.hpp
include/widgets/base/: frame.hpp  label.hpp
src/: kcuckounterui.rc  main.cpp  mainwindow.cpp  settings.cpp
src/strategy/: strategy.cpp  strategyinfo.cpp
src/table/: table.cpp  tableslot.cpp
src/widgets/: cards.cpp  carousel.cpp
src/widgets/base/: frame.cpp  label.cpp
tests/: main.cpp  test_cards.cpp  test_mainwindow.cpp  test_strategy.cpp  test_table.cpp
